# Chip-8_interpreter

./: CMakeLists.txt  LICENSE  README.md
Chip-8_interpreter/src/: chip8.cpp  chip8.h  platform.h
chip-8_interpreter/src/: main.cpp  platform.cpp
